--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="text-white font-sans">
 
   <!-- Navigation Bar -->
-  <nav class="bg-gray-800 text-white p-4 shadow-md">
+  <nav class="fixed w-full h-[60px] top-0 z-40 bg-gray-800 text-white p-4 shadow-md">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
       <h1 class="text-2xl font-bold text-cyan-400 animate-pulse">Benigne</h1>
       <div class="space-x-6  md:block">
@@ -30,7 +30,7 @@
   </nav>
 
   <!-- Main Content -->
-  <main class="min-h-screen flex flex-col justify-center items-center px-4 py-12">
+  <main class="min-h-screen   flex flex-col justify-center items-center px-4 py-12 mt-20">
     <section id="about" class="flex flex-col md:flex-row items-center justify-center gap-10 max-w-5xl w-full">
       <!-- Image Section -->
       <figure class="relative animate-bounce">
@@ -39,7 +39,7 @@
       </figure>
 
       <!-- About Section -->
-      <article class="text-center md:text-left max-w-xl">
+      <article class="text-center md:text-left max-w-xl ">
         <h2 class="text-3xl font-bold mb-2">About <span class="text-cyan-400">Me</span></h2>
         <h3 class="text-xl font-semibold mb-4">Full Stack Developer!</h3>
         <p class="text-gray-300 leading-relaxed">
@@ -107,7 +107,7 @@
   </main>
 
     <!-- Contact Section -->
-    <section id="contact" class="py-16 px-6 md:px-20 bg-gray-800 text-white">
+    <section id="contact" class="py-16 px-6 md:px-20 bg-gray-800 text-white ">
         <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-10">
           <!-- Left Info -->
           <div>
